# cwavelet

./: .gitignore  CMakeLists.txt  COPYING  Makefile  Makefile.inc  README.md  autogen.sh  cWavelet.tmproj  circ_array.c  circ_array.h  daubechies.c  daubechies.h  haar.c  haar.h  tests.c  tests.h  wavelet.c  wavelet.h
src/: CMakeLists.txt  Makefile  circ_array.c  circ_array.h  daubechies.c  daubechies.h  haar.c  haar.h  openmp_wavelet.c  pthreads_wavelet.c  pthreads_wavelet.h  single_wavelet.c  wavelet.c  wavelet.h
tests/: CMakeLists.txt  Makefile  circ_arrayTest.c  daubechiesTest.c  haarTest.c  logBase2.c  splitTest.c  testingCommon.h  tests.c  tests.h
